Pull up following revision(s) (requested by sevan in ticket #1182): 	bin/cat/cat.c: revision 1.57 	distrib/sets/lists/tests/mi: revision 1.675 	tests/bin/cat/Makefile: revision 1.2 	tests/bin/cat/d_se_output.in: revision 1.1 	tests/bin/cat/d_se_output.out: revision 1.1 	tests/bin/cat/t_cat.sh: revision 1.3 When invoked with -se, print a '$' on blank lines Obtained from OpenBSD r1.13 of src/bin/cat/cat.c Closes PR bin/51250 Reviewed by Christos@ -- Add a unit test for PR bin/51250 called se_output. se_output checks the output of cat when invoked with '-se', to ensure that a '$' is printed on blank lines. -- Add input/output files for new test case - fix build